--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     "ext-openssl": "*",
     "ext-posix": "*",
     "ext-curl": "*",
-    "psr/log": "^1.1",
+    "psr/log": "*",
     "ext-simplexml": "*",
-    "monolog/monolog": "^2.2"
+    "monolog/monolog": "*"
   }
 }
