dded init.php to autoload and updated readme

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     "psr/log": "*",
     "ext-simplexml": "*",
     "monolog/monolog": "*"
+  },
+  "autoload": {
+    "files": ["init.php"]
   }
 }
