removed unneeded components from SDK export

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "ext-posix": "*",
     "ext-curl": "*",
     "psr/log": "*",
-    "ext-simplexml": "*",
+    "ext-simplexml": "*"
+  },
+  "require-dev": {
     "monolog/monolog": "*"
   },
   "autoload": {
